backend: add some todo api
