# backend/docs/swagger.json
@@ -19,7 +19,7 @@
                 "tags": [
                     "待办管理"
                 ],
-                "summary": "创建待办",
+                "summary": "创建、修改待办",
                 "parameters": [
                     {
                         "description": "body",
@@ -27,7 +27,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/todo.CreateTodoRequest"
+                            "$ref": "#/definitions/todo.UpsertTodoRequest"
                         }
                     }
                 ],
@@ -442,34 +442,6 @@
                 }
             }
         },
-        "todo.CreateTodoRequest": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "description": "内容",
-                    "type": "string"
-                },
-                "images": {
-                    "description": "图片",
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "needRemind": {
-                    "description": "是否需要提醒",
-                    "type": "boolean"
-                },
-                "remindSetting": {
-                    "description": "提醒设置",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/pchat_pb_todo.RemindSetting"
-                        }
-                    ]
-                }
-            }
-        },
         "todo.ListTodoRecordsRequest": {
             "type": "object",
             "properties": {
@@ -558,6 +530,38 @@
                 "userId": {
                     "description": "关联 user",
                     "type": "string"
+                }
+            }
+        },
+        "todo.UpsertTodoRequest": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "description": "内容",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
+                    "type": "string"
+                },
+                "images": {
+                    "description": "图片",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "needRemind": {
+                    "description": "是否需要提醒",
+                    "type": "boolean"
+                },
+                "remindSetting": {
+                    "description": "提醒设置",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/pchat_pb_todo.RemindSetting"
+                        }
+                    ]
                 }
             }
         },
